<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.MovieDetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_details"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/dark_red"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_movies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/textview"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/tv_now_playing"
        android:textColor="@color/white" />

    <View
        android:id="@+id/view_details"
        android:layout_width="406dp"
        android:layout_height="637dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_details" />

    <ImageView
        android:id="@+id/image_movie_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/movieTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_details"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movieTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_movie_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/image_movie_detail"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_details" />

    <TextView
        android:id="@+id/movieReleaseDataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_release_date"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/image_movie_detail"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleTextView" />

    <TextView
        android:id="@+id/genreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_genre_movie"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/image_movie_detail"
        app:layout_constraintTop_toBottomOf="@+id/movieReleaseDataTextView" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_origin_language"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/genreTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieReleaseDataTextView" />

    <TextView
        android:id="@+id/overviewTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_overview"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>